Usando async y await

--- a/_posts/2019-05-14-hoisting.md
+++ b/_posts/2019-05-14-hoisting.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Usando Bind, Call y Apply"
+title: "Hoisting"
 tags: [objetos, javascript, conceptos programación]
 author: jbermudez
 image: assets/images/stones-hoisting.png
